--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/seanhaneberg/controller-threejs-proto#readme",
   "devDependencies": {
-    "webpack": "^4.33.0"
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2"
   }
 }
