--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/seanhaneberg/controller-threejs-proto#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   }
