--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/seanhaneberg/controller-threejs-proto#readme",
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   }
