--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   },
   "homepage": "https://github.com/seanhaneberg/controller-threejs-proto#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.0.6",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
-  }
+  },
+  "dependencies": {}
 }
