--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@babel/core": "^7.4.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.7.0"
   },
   "dependencies": {}
 }
