--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "homepage": "https://github.com/seanhaneberg/controller-threejs-proto#readme",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -33,5 +36,7 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "three": "^0.105.2"
+  }
 }
